@@ -57,8 +57,9 @@ class WebKitSettings(websettings.AbstractSettings):
             Attr(QWebSettings.JavascriptCanOpenWindows),
         'content.javascript.can_close_tabs':
             Attr(QWebSettings.JavascriptCanCloseWindows),
-        'content.javascript.can_access_clipboard':
-            Attr(QWebSettings.JavascriptCanAccessClipboard),
+        'content.javascript.clipboard':
+            Attr(QWebSettings.JavascriptCanAccessClipboard,
+                 converter=lambda val: val != "none"),
         'content.plugins':
             Attr(QWebSettings.PluginsEnabled),
         'content.webgl':
